GRAD2-3276 - Apply client authentication to GRAD-GRADUATION-API